src/scrn.zig

//! Screen / escape-sequence interface — replaces `joe/scrn.c`.
//!
//! Faithful C-ABI port of JOE's terminal screen buffer and attribute
//! emission. Generated from a goto-free rewrite of scrn.c (non-TERMINFO
//! path) via `zig translate-c`, then cleaned for the hybrid Zig+C build.

const std = @import("std");
const terminal = @import("terminal");
const tty = @import("tty.zig");
const ptrdiff_t = c_long;

pub extern fn printf(fmt: [*c]const u8, ...) c_int;
pub extern fn snprintf(buf: [*c]u8, n: c_ulong, fmt: [*c]const u8, ...) c_int;
pub extern fn fprintf(stream: ?*anyopaque, fmt: [*c]const u8, ...) c_int;
pub extern fn fputs(s: [*c]const u8, stream: ?*anyopaque) c_int;
pub extern fn fflush(stream: ?*anyopaque) c_int;
pub extern fn getenv(name: [*c]const u8) [*c]u8;
pub extern fn free(p: ?*anyopaque) void;
pub extern fn memcpy(d: ?*anyopaque, s: ?*const anyopaque, n: c_ulong) ?*anyopaque;
pub extern fn memset(s: ?*anyopaque, c: c_int, n: c_ulong) ?*anyopaque;
pub extern fn strcmp(a: [*c]const u8, b: [*c]const u8) c_int;
pub extern fn strlen(s: [*c]const u8) c_ulong;
pub const off_t = i64;
pub const FILE = anyopaque;
pub extern var __stdinp: ?*FILE;
pub extern var __stdoutp: ?*FILE;
pub extern var __stderrp: ?*FILE;
pub const struct_hentry = extern struct {
    next: ptrdiff_t = 0,
    loc: ptrdiff_t = 0,
};
pub const struct_sortentry = extern struct {
    name: [*c]u8 = null,
    value: [*c]u8 = null,
};
pub const struct_cap = extern struct {
    tbuf: [*c]u8 = null,
    sort: [*c]struct_sortentry = null,
    sortlen: ptrdiff_t = 0,
    abuf: [*c]u8 = null,
    abufp: [*c]u8 = null,
    div: c_long = 0,
    baud: c_long = 0,
    pad: [*c]const u8 = null,
    out: ?*const fn (?*anyopaque, u8) callconv(.c) void = null,
    outptr: ?*anyopaque = null,
    dopadding: c_int = 0,
};
pub const CAP = struct_cap;
pub const struct_scrn = extern struct {
    cap: [*c]CAP = null,
    li: ptrdiff_t = 0,
    co: ptrdiff_t = 0,
    ti: [*c]const u8 = null,
    cl: [*c]const u8 = null,
    cd: [*c]const u8 = null,
    te: [*c]const u8 = null,
    brp: [*c]const u8 = null,
    bre: [*c]const u8 = null,
    haz: c_int = 0,
    os: c_int = 0,
    eo: c_int = 0,
    ul: c_int = 0,
    am: c_int = 0,
    xn: c_int = 0,
    so: [*c]const u8 = null,
    se: [*c]const u8 = null,
    us: [*c]const u8 = null,
    ue: [*c]const u8 = null,
    uc: [*c]const u8 = null,
    ms: c_int = 0,
    _pad_ms: c_int = 0,
    mb: [*c]const u8 = null,
    md: [*c]const u8 = null,
    mh: [*c]const u8 = null,
    mr: [*c]const u8 = null,
    stricken: [*c]const u8 = null,
    dunderline: [*c]const u8 = null,
    me: [*c]const u8 = null,
    ZH: [*c]const u8 = null,
    ZR: [*c]const u8 = null,
    Sb: [*c]const u8 = null,
    Sf: [*c]const u8 = null,
    Co: c_int = 0,
    Tc: c_int = 0,
    ut: c_int = 0,
    da: c_int = 0,
    db: c_int = 0,
    _pad_db: c_int = 0,
    al: [*c]const u8 = null,
    dl: [*c]const u8 = null,
    AL: [*c]const u8 = null,
    DL: [*c]const u8 = null,
    cs: [*c]const u8 = null,
    rr: c_int = 0,
    _pad_rr: c_int = 0,
    sf: [*c]const u8 = null,
    SF: [*c]const u8 = null,
    sr: [*c]const u8 = null,
    SR: [*c]const u8 = null,
    dm: [*c]const u8 = null,
    dc: [*c]const u8 = null,
    DC: [*c]const u8 = null,
    ed: [*c]const u8 = null,
    im: [*c]const u8 = null,
    ic: [*c]const u8 = null,
    IC: [*c]const u8 = null,
    ip: [*c]const u8 = null,
    ei: [*c]const u8 = null,
    mi: c_int = 0,
    _pad_mi: c_int = 0,
    bs: [*c]const u8 = null,
    cbs: ptrdiff_t = 0,
    lf: [*c]const u8 = null,
    clf: ptrdiff_t = 0,
    up: [*c]const u8 = null,
    cup: ptrdiff_t = 0,
    nd: [*c]const u8 = null,
    ta: [*c]const u8 = null,
    cta: ptrdiff_t = 0,
    bt: [*c]const u8 = null,
    cbt: ptrdiff_t = 0,
    tw: ptrdiff_t = 0,
    ho: [*c]const u8 = null,
    cho: ptrdiff_t = 0,
    ll: [*c]const u8 = null,
    cll: ptrdiff_t = 0,
    cr: [*c]const u8 = null,
    ccr: ptrdiff_t = 0,
    RI: [*c]const u8 = null,
    cRI: ptrdiff_t = 0,
    LE: [*c]const u8 = null,
    cLE: ptrdiff_t = 0,
    UP: [*c]const u8 = null,
    cUP: ptrdiff_t = 0,
    DO: [*c]const u8 = null,
    cDO: ptrdiff_t = 0,
    ch: [*c]const u8 = null,
    cch: ptrdiff_t = 0,
    cv: [*c]const u8 = null,
    ccv: ptrdiff_t = 0,
    cV: [*c]const u8 = null,
    ccV: ptrdiff_t = 0,
    cm: [*c]const u8 = null,
    ccm: ptrdiff_t = 0,
    ce: [*c]const u8 = null,
    cce: ptrdiff_t = 0,
    assume_256: c_int = 0,
    truecolor: c_int = 0,
    palette: [*c]c_int = null,
    scroll: c_int = 0,
    insdel: c_int = 0,
    scrn: [*c][4]c_int = null,
    attr: [*c]c_int = null,
    x: ptrdiff_t = 0,
    y: ptrdiff_t = 0,
    top: ptrdiff_t = 0,
    bot: ptrdiff_t = 0,
    attrib: c_int = 0,
    ins: c_int = 0,
    updtab: [*c]c_int = null,
    avattr: c_int = 0,
    _pad_avattr: c_int = 0,
    sary: [*c]ptrdiff_t = null,
    compose: [*c]c_int = null,
    ofst: [*c]ptrdiff_t = null,
    htab: [*c]struct_hentry = null,
    ary: [*c]struct_hentry = null,
};
pub const SCRN = struct_scrn;
pub const struct_charmap = extern struct {
    next: [*c]struct_charmap = null,
    name: [*c]const u8 = null,
    type: c_int = 0,
    is_punct: ?*const fn (map: [*c]struct_charmap, c: c_int) callconv(.c) c_int = null,
    is_print: ?*const fn (map: [*c]struct_charmap, c: c_int) callconv(.c) c_int = null,
    _pad: [2712]u8 = std.mem.zeroes([2712]u8),
};
pub extern fn joe_malloc(size: ptrdiff_t) ?*anyopaque;
pub extern fn joe_calloc(nmemb: ptrdiff_t, size: ptrdiff_t) ?*anyopaque;
pub extern fn joe_realloc(ptr: ?*anyopaque, size: ptrdiff_t) ?*anyopaque;
pub extern fn joe_free(ptr: ?*anyopaque) void;
pub extern fn mmove(d: ?*anyopaque, s: ?*const anyopaque, sz: ptrdiff_t) ?*anyopaque;
pub extern fn msetI(d: ?*anyopaque, c: c_int, sz: ptrdiff_t) ?*anyopaque;
pub extern fn msetD(d: ?*anyopaque, c: ptrdiff_t, sz: ptrdiff_t) ?*anyopaque;
pub extern fn setcap(cap: [*c]CAP, baud: c_long, out: ?*const fn (?*anyopaque, u8) callconv(.c) void, outptr: ?*anyopaque) [*c]CAP;
pub extern fn jgetstr(cap: [*c]CAP, name: [*c]const u8) [*c]const u8;
pub extern fn getflag(cap: [*c]CAP, name: [*c]const u8) c_int;
pub extern fn getnum(cap: [*c]CAP, name: [*c]const u8) c_int;
pub extern fn rmcap(cap: [*c]CAP) void;
pub extern fn texec(cap: [*c]CAP, s: [*c]const u8, l: ptrdiff_t, a0: ptrdiff_t, a1: ptrdiff_t, a2: ptrdiff_t, a3: ptrdiff_t) void;
pub extern fn tcost(cap: [*c]CAP, s: [*c]const u8, l: ptrdiff_t, a0: ptrdiff_t, a1: ptrdiff_t, a2: ptrdiff_t, a3: ptrdiff_t) ptrdiff_t;
pub extern fn ttopen() void;
pub extern fn ttclose() void;
pub extern fn ttflsh() void;
pub extern fn ttputs(s: [*c]const u8) void;
pub extern fn ttgtsz(x: [*c]ptrdiff_t, y: [*c]ptrdiff_t) void;
pub extern fn signrm() void;
pub extern fn mouseopen() void;
pub extern fn mouseclose() void;
pub extern var tty_baud: c_long;
pub extern var obufp: ptrdiff_t;
pub extern var obufsiz: ptrdiff_t;
pub extern var obuf: [*c]u8;
pub extern var have: c_int;
pub extern var leave: c_int;
pub extern var locale_map: [*c]struct_charmap;
pub extern var dspasis: c_int;
pub extern var opt_mid: c_int;
pub extern var opt_left: c_int;
pub extern var opt_right: c_int;
pub extern var dostaupd: c_int;
pub extern fn sprintf(buf: [*c]u8, fmt: [*c]const u8, ...) c_int;
pub extern fn zicmp(a: [*c]const u8, b: [*c]const u8) c_int;
pub extern fn ztoi(s: [*c]const u8) c_int;
pub extern fn unictrl(c: c_int) c_int;
pub extern fn utf8_putc(c: c_int) void;
pub const struct_utf8_sm = extern struct {
    buf: [8]u8 = std.mem.zeroes([8]u8),
    ptr: ptrdiff_t = 0,
    state: c_int = 0,
    accu: c_int = 0,
};
pub extern fn utf8_init(sm: [*c]struct_utf8_sm) void;
pub extern fn utf8_decode(sm: [*c]struct_utf8_sm, c: u8) c_int;
pub extern fn utf8_encode(buf: [*c]u8, c: c_int) ptrdiff_t;
pub extern fn to_uni(cset: [*c]struct_charmap, c: c_int) c_int;
pub extern fn from_uni(cset: [*c]struct_charmap, c: c_int) c_int;
pub extern fn joe_wcwidth(wide: c_int, c: c_int) c_int;
pub extern fn cclass_lookup(table: ?*const anyopaque, c: c_int) c_int;
// C header: `extern struct Cclass cclass_combining[1];` — object, not pointer var.
const cclass_combining: *anyopaque = @extern(*anyopaque, .{ .name = "cclass_combining" });
pub const COMPOSE = @as(c_int, 4);
pub const CONTEXT_COMMENT = @as(c_int, 1);
pub const CONTEXT_STRING = @as(c_int, 2);
pub const CONTEXT_MASK = CONTEXT_COMMENT + CONTEXT_STRING;
pub const DOUBLE_UNDERLINE = @as(c_int, 8);
pub const CROSSED_OUT = @as(c_int, 16);
pub const ITALIC = @as(c_int, 32);
pub const INVERSE = @as(c_int, 64);
pub const UNDERLINE = @as(c_int, 128);
pub const BOLD = @as(c_int, 256);
pub const BLINK = @as(c_int, 512);
pub const DIM = @as(c_int, 1024);
pub const AT_MASK = ((((((INVERSE + UNDERLINE) + BOLD) + BLINK) + DIM) + ITALIC) + DOUBLE_UNDERLINE) + CROSSED_OUT;
pub const BG_SHIFT = @as(c_int, 11);
pub const BG_VALUE = @as(c_int, 255) << BG_SHIFT;
pub const BG_NOT_DEFAULT = @as(c_int, 256) << BG_SHIFT;
pub const BG_TRUECOLOR = @as(c_int, 512) << BG_SHIFT;
pub const BG_MASK = @as(c_int, 1023) << BG_SHIFT;
pub const BG_DEFAULT = @as(c_int, 0) << BG_SHIFT;
pub const FG_SHIFT = @as(c_int, 21);
pub const FG_VALUE = @as(c_int, 255) << FG_SHIFT;
pub const FG_NOT_DEFAULT = @as(c_int, 256) << FG_SHIFT;
pub const FG_TRUECOLOR = @as(c_int, 512) << FG_SHIFT;
pub const FG_MASK = @as(c_int, 1023) << FG_SHIFT;
pub const FG_DEFAULT = @as(c_int, 0) << FG_SHIFT;
pub const BG_BLACK = BG_NOT_DEFAULT | (@as(c_int, 0) << BG_SHIFT);
pub const BG_RED = BG_NOT_DEFAULT | (@as(c_int, 1) << BG_SHIFT);
pub const BG_GREEN = BG_NOT_DEFAULT | (@as(c_int, 2) << BG_SHIFT);
pub const BG_YELLOW = BG_NOT_DEFAULT | (@as(c_int, 3) << BG_SHIFT);
pub const BG_BLUE = BG_NOT_DEFAULT | (@as(c_int, 4) << BG_SHIFT);
pub const BG_MAGENTA = BG_NOT_DEFAULT | (@as(c_int, 5) << BG_SHIFT);
pub const BG_CYAN = BG_NOT_DEFAULT | (@as(c_int, 6) << BG_SHIFT);
pub const BG_WHITE = BG_NOT_DEFAULT | (@as(c_int, 7) << BG_SHIFT);
pub const BG_BBLACK = BG_NOT_DEFAULT | (@as(c_int, 8) << BG_SHIFT);
pub const BG_BRED = BG_NOT_DEFAULT | (@as(c_int, 9) << BG_SHIFT);
pub const BG_BGREEN = BG_NOT_DEFAULT | (@as(c_int, 10) << BG_SHIFT);
pub const BG_BYELLOW = BG_NOT_DEFAULT | (@as(c_int, 11) << BG_SHIFT);
pub const BG_BBLUE = BG_NOT_DEFAULT | (@as(c_int, 12) << BG_SHIFT);
pub const BG_BMAGENTA = BG_NOT_DEFAULT | (@as(c_int, 13) << BG_SHIFT);
pub const BG_BCYAN = BG_NOT_DEFAULT | (@as(c_int, 14) << BG_SHIFT);
pub const BG_BWHITE = BG_NOT_DEFAULT | (@as(c_int, 15) << BG_SHIFT);
pub const FG_BWHITE = FG_NOT_DEFAULT | (@as(c_int, 15) << FG_SHIFT);
pub const FG_BCYAN = FG_NOT_DEFAULT | (@as(c_int, 14) << FG_SHIFT);
pub const FG_BMAGENTA = FG_NOT_DEFAULT | (@as(c_int, 13) << FG_SHIFT);
pub const FG_BBLUE = FG_NOT_DEFAULT | (@as(c_int, 12) << FG_SHIFT);
pub const FG_BYELLOW = FG_NOT_DEFAULT | (@as(c_int, 11) << FG_SHIFT);
pub const FG_BGREEN = FG_NOT_DEFAULT | (@as(c_int, 10) << FG_SHIFT);
pub const FG_BRED = FG_NOT_DEFAULT | (@as(c_int, 9) << FG_SHIFT);
pub const FG_BBLACK = FG_NOT_DEFAULT | (@as(c_int, 8) << FG_SHIFT);
pub const FG_WHITE = FG_NOT_DEFAULT | (@as(c_int, 7) << FG_SHIFT);
pub const FG_CYAN = FG_NOT_DEFAULT | (@as(c_int, 6) << FG_SHIFT);
pub const FG_MAGENTA = FG_NOT_DEFAULT | (@as(c_int, 5) << FG_SHIFT);
pub const FG_BLUE = FG_NOT_DEFAULT | (@as(c_int, 4) << FG_SHIFT);
pub const FG_YELLOW = FG_NOT_DEFAULT | (@as(c_int, 3) << FG_SHIFT);
pub const FG_GREEN = FG_NOT_DEFAULT | (@as(c_int, 2) << FG_SHIFT);
pub const FG_RED = FG_NOT_DEFAULT | (@as(c_int, 1) << FG_SHIFT);
pub const FG_BLACK = FG_NOT_DEFAULT | (@as(c_int, 0) << FG_SHIFT);

pub export fn clrins(arg_t: [*c]SCRN) c_int {
    var t = arg_t;
    _ = &t;
    if (t.*.ins != @as(c_int, 0)) {
        texec(t.*.cap, t.*.ei, 1, 0, 0, 0, 0);
        t.*.ins = 0;
    }
    return 0;
}
